Fix: horizontal alignment on section footer

--- a/0x02-CSS_advanced/styles/17-style.css
+++ b/0x02-CSS_advanced/styles/17-style.css
@@ -73,7 +73,7 @@ a:active {
 }
 .section-footer {
   padding: var(--section-footer-padding);
-  width: var(--section-footer-align);
+  text-align: var(--section-footer-align);
 }
 .section-title {
   font-family: var(--font-family-title);
